# sMRI-vertigo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
data/: README.md
docs/: overview.md
notebooks/: README.md
notebooks/clinical/: 01_clinical_pipeline.ipynb  02_cluster_kmeans3.ipynb  03_cluster_kmeans2.ipynb  04_cluster_spectral2.ipynb  05_cluster_average2.ipynb
notebooks/msn/: 01_build_health_msn.ipynb  02_build_patient_msn.ipynb  03_clustering.ipynb  04_nc_vs_patient_network.ipynb  05_nbs_analysis.ipynb  06_gcn_features.ipynb  07_topology_statistics.ipynb
scripts/: example_msn_config.yaml
src/: nbs_glm.py
src/clinical_analysis/: README.md  __init__.py  ancova.py  cli.py  config.py  distribution_analysis.py  io.py  logistic_models.py  ml_nonlinearity.py  pipeline.py  plotting.py  quantile_models.py
src/cluster_models/: __init__.py  models.py  prepare.py  run_cv.py
src/msn_pipeline/: __init__.py  config.py  pipeline.py
src/msn_pipeline/clustering/: __init__.py  stability.py  strategies.py
src/msn_pipeline/data/: __init__.py  loader.py  paths.py
src/msn_pipeline/features/: __init__.py  gcn.py  topology.py
src/msn_pipeline/msn/: __init__.py  brain_network.py  network_builder.py  similarity.py
src/msn_pipeline/pipelines/: __init__.py  clustering_pipeline.py  feature_building.py  msn_construction.py  run_all.py
src/msn_stats/: __init__.py  data.py  edgewise.py  fdr.py  nbs_glm.py  nbs_impl.py  posthoc.py
src/msn_stats/pipelines/: __init__.py  cluster_nbs.py  nc_vs_patient_nbs.py  topology_stats.py
